--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,6 @@ spring:
       
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc://localhost:3306/memo
+    url: jdbc:mysql://localhost:3306/ma1lingstagram
     username: root
     password: 5573
